# ros2-camera-framework

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
docs/: architecture.md
notes/: learning-roadmap.md
src/camera_interfaces/: CMakeLists.txt  package.xml
src/camera_interfaces/action/: FocusSweep.action
src/camera_learning/: CMakeLists.txt  package.xml
src/camera_learning/config/: status_publisher.yaml
src/camera_learning/launch/: status_pipeline.launch.py
src/camera_learning/src/: hello_node.cpp  status_publisher.cpp  status_subscriber.cpp
