<?xml version="1.0"?>
<package format="3">
  <name>camera_learning</name>
  <version>0.0.1</version>

  <description>ROS 2 camera learning exercises.</description>

  <maintainer email="andy199413@gmail.com">
    Ahua199413
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>